workspace/log/build_2024-12-08_11-17-00/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘void MultiDroneControl::move_drones(MultiDroneControl::Coords)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:252:26: error: ‘current_positions_drone_namespaces_’ was not declared in this scope
  252 |         auto posDrone1 = current_positions_drone_namespaces_[0];
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:257:18: error: ‘coordsDrone2’ was not declared in this scope
  257 |         std::tie(coordsDrone2, coordsDrone3) = calculateFollowerPositions(coordsDrone1);
      |                  ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:257:32: error: ‘coordsDrone3’ was not declared in this scope
  257 |         std::tie(coordsDrone2, coordsDrone3) = calculateFollowerPositions(coordsDrone1);
      |                                ^~~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:257:75: error: ‘coordsDrone1’ was not declared in this scope
  257 |         std::tie(coordsDrone2, coordsDrone3) = calculateFollowerPositions(coordsDrone1);
      |                                                                           ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
